Bug 328564 - Shift + slow horizontal drag does not change the brush size smoothly in Krita 2.8-beta
Summary: Shift + slow horizontal drag does not change the brush size smoothly in Krita...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 2.9 Beta
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-09 09:13 UTC by Tyson Tan
Modified: 2019-06-27 23:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tyson Tan 2013-12-09 09:13:24 UTC
In Krita 2.8-beta1, Shift + slow horizontal drag does not change the brush size smoothly. However, if I drag it quickly, the value would change smoothly. Such behavior makes it very difficult to control the brush size precisely on canvas.

Reproducible: Always

Steps to Reproduce:
1. Brush tool
2. Shift + LMB + SLOW horizontal movement (drag)
3. Brush size value does not change smoothly.

Actual Results:  
Shift + slow horizontal drag does not change the brush size smoothly.

Expected Results:  
Shift + slow horizontal drag should change the brush size smoothly.

Tested on Trisquel 6.0 (Ubuntu 12.04 LTS derivative). Gnome 3.4 running under Gnome Classic desktop.
Comment 1 Dmitry Kazakov 2013-12-09 12:16:27 UTC
Hi, Tyson!

Could you tell more exactly, what exactly do you mean by "not smoothly"? Here is changes quite good when I change do the drag... Probably, you could make a video?
Comment 2 Tyson Tan 2013-12-09 16:14:23 UTC
The symptom looks like this:
1. Brush tool
2. Set Brush Size to 0
3. Press Shift + Drag to the right (enlarge brush size)
4. When I press Shift + drag quickly, the value changes smoothly.
5. When my stylus moves at the speed about 5 mm/s or even slower -- I do that a lot when I want to control the brush size precisely between 1~10 -- the brush size sometimes does not change at all, while sometimes it does -- which feels rather jittery. The brush size just jumps like 22-24-29, not 22-23-24-25-26-27-28-29. I have to use the keyboard shortcut "[" or "]" to control the value precisely. (the up and down key on the right of the adjustment bar does not work because they would max out to 1000 after a few click. I don't know if there is any one reported this bug yet.)

Because when you press Shift + drag, the mouse movement is reflected by the brush outline -- exactly the thing that is not working here -- a screen recorder cannot reveal much information. I think I must use a video recorder to shot my hand as well as the screeen so that you can see how my stylus is moving but the value on screen is not changing. Unfortunately I don't have a video recorder at the moment, so I can only describe the problem using text report. Sorry!
Comment 3 Tyson Tan 2013-12-09 16:24:56 UTC
I switched back to 2.7.5 and did some comparison. It seems that when Shift is pressed, any horizontal drag, as tiny as the movement of merely ONE pixel, changes the brush size value. In 2.8-beta1, however, Shift + horizontal draw doesn't seem to recognize subtle movements.
Comment 4 Dmitry Kazakov 2013-12-10 10:05:35 UTC
Hi, Tyson! 

Yes, I've just reproduced the bug! Thank you for the detailed description. This happens only when the zoom is high enough (>> 100%).
Comment 5 Dmitry Kazakov 2013-12-10 13:32:06 UTC
Git commit fcb6550a6502f3714772d1542c5e75a6e880f25c by Dmitry Kazakov.
Committed on 10/12/2013 at 13:31.
Pushed by dkazakov into branch 'master'.

Fix autobrush size calculation

1) Brush cannot be smaller than 0.1 in size
2) Make it possible to paint something with brushes smaller than 1.0
Related: bug 324987

M  +2    -2    krita/plugins/paintops/libbrush/kis_auto_brush.cpp
M  +5    -1    krita/plugins/paintops/libpaintop/kis_auto_brush_widget.cpp
M  +1    -3    krita/plugins/paintops/libpaintop/kis_brush_chooser.cpp

http://commits.kde.org/calligra/fcb6550a6502f3714772d1542c5e75a6e880f25c
Comment 6 Dmitry Kazakov 2013-12-10 13:34:01 UTC
Git commit e3174415441583c93c48a14cb44e91dd1ed1dff2 by Dmitry Kazakov.
Committed on 10/12/2013 at 13:31.
Pushed by dkazakov into branch 'calligra/2.8'.

Fix autobrush size calculation

1) Brush cannot be smaller than 0.1 in size
2) Make it possible to paint something with brushes smaller than 1.0
Related: bug 324987

M  +2    -2    krita/plugins/paintops/libbrush/kis_auto_brush.cpp
M  +5    -1    krita/plugins/paintops/libpaintop/kis_auto_brush_widget.cpp
M  +1    -3    krita/plugins/paintops/libpaintop/kis_brush_chooser.cpp

http://commits.kde.org/calligra/e3174415441583c93c48a14cb44e91dd1ed1dff2
Comment 7 Tyson Tan 2013-12-10 16:14:27 UTC
You're welcome & Thank you for fixing this bug, too! :)