Fix autobrush size calculation

1) Brush cannot be smaller than 0.1 in size
2) Make it possible to paint something with brushes smaller than 1.0

BUG:328564
BUG:324987